--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-# hcfinale.github.io
-这个是我穿件的github网站
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>github创建的网站</title>
+	<link rel="stylesheet" href="">
+</head>
+<body>
+	<div>
+		这个是github创建的第一个网站。
+	</div>
+</body>
+</html>
