--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>github创建的网站</title>
+	<link href="/favicon.ico" rel="shortcut icon">
 	<link rel="stylesheet" href="">
+	<style>
+		.yellow{color:yellow;}
+	</style>
 </head>
 <body>
-	<div>
-		这个是github创建的第一个网站。
+	<div class="yellow">
+		<h3>这个是github创建的第一个网站。</h3>
 	</div>
 </body>
 </html>
