--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="/favicon.ico" rel="shortcut icon">
 	<link rel="stylesheet" href="">
 	<style>
-		.yellow{color:blue;}
+		.yellow{color:#E90012;}
 	</style>
 </head>
 <body>
